2005-10-11  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Don't redraw everything
	when monitoring a log, just add the new lines.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Fix the menu sensitivity
	logic following the recent change in monitor behavior.

2005-10-11  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_monospace_font_changed): New.
	(CreateMainWin): Listen to changes to the monospace font gconf key
	and update the window accordingly.

2005-10-06  Dennis Cranston <dennis_cranston@yahoo.com>

	* logview.c (main):  Add application name (used in window title).

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* calendar.c (calendar_day_selected): Track the currently selected
	line when switching logs.

	* log_repaint.c (logview_draw_log_lines): It took me 3 hours to
	find the damned g_free that was crashing everything.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Some weird hanging issue
	- glib complains about corrupted double-linked list. Mmmh.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* logview.c: Monitor logs by default.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Plug a huge memory leak
	(utf8 strings not freed after insertion in a GtkTreeStore).
	(logview_draw_log_lines): Plug a leak. Valgrind is da bomb.

	* logrtns.c (OpenLogFile): Plug leaks.
	(ReadLogStats): Plug a leak by using
	gnome_vfs_file_info_unref. Totally not obvious...
	(WasModified): Removed.
	(GetDate): make static.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Correctly scroll to the
	end of the log when new lines are added.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_create_monitor_widget, monitor_stop): Some leftover cruft.
	* monitor.c (monitor_callback): Make it static.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Remove.