@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (logview_draw_log_lines): Don't refill the whole
+	model every time we redraw a log, just keep it around.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c (logview_draw_log_lines): Don't redraw everything
 	when monitoring a log, just add the new lines.
 
